# image-processing

./: README.md
FaceAndAgePredictionUsingCNN-ParentalAgeLimit/: report.docx  user_manual.pptx
FaceAndAgePredictionUsingCNN-ParentalAgeLimit/Help/Application_Help/: jAgeRestrictionUsingCam_Help.docx  jAgeRestriction_Help.docx  jAgeRestriction_Help.htm
FaceAndAgePredictionUsingCNN-ParentalAgeLimit/Visual_Program/: jAgeRestriction.WKS
FaceRecognitionUsingColor/: WorkSpace.WKS  report.docx
FaceRecognitionUsingColor/FaceRecognitionUsingHSI/: FaceRecognitionUsingHSI.cpp  FaceRecognitionUsingHSI.h
FaceRecognitionUsingHistogram/: WorkSpace.WKS
FaceRecognitionUsingHistogram/IntensityHistogramMedianValueFinder/: IntensityHistogramMedianValueFinder.cpp
MovingDetectionUsingDifferenceImage/: WorkSpace.WKS
MovingDetectionUsingDifferenceImage/HistogramSpecifiacation/: jHistogramSpecifiacation.cpp  jHistogramSpecifiacation.h
MovingDetectionUsingDifferenceImage/LabelingAndCalculateHistogram/: jLabelingAndCalculateHistogram.cpp
MovingDetectionUsingDifferenceImage/SubtractAndThresholding/: jSubtractAndThresholding.cpp
high-resolution-transformation/: requirements.txt
high-resolution-transformation/souce/: main.py
src/FaceAndAgePredictionUsingCNN-ParentalAgeLimit/Source/AgeChecker/: CMakeLists.txt  jAgeChecker.cpp  jAgeChecker.h
src/FaceRecognitionUsingHistogram/: report.docx
src/MovingDetectionUsingDifferenceImage/: WorkSpace_Test.WKS  report.docx
src/resolution-transformation/: download.sh  requirements.txt
src/resolution-transformation/souce/: main.py
(+35 files in other folders)
